front-end/src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

input {
    @apply px-4 py-3 outline-none border-gray-300 border-2 rounded-lg;
}

.btn-main {
    @apply px-4 py-1.5 outline-none border-gray-300 border-2 rounded-lg cursor-pointer;
}

.add {
    @apply text-2xl text-gray-400;
}

.icon {
    @apply text-gray-400 text-lg ml-5 hover:text-red-400 hover:cursor-pointer shrink-0;
}

.main-container {
    @apply w-full py-10 px-6 shadow-md;
}

.chart-container {
    @apply w-full max-h-[700px] px-2 py-4 select-none mx-auto;
}

.nav-bar {
    @apply w-full h-20 shadow-md py-4 flex gap-5 items-center justify-center;
}

.nav-bar-link {
    @apply hover:text-blue-400;
}

.footer {
    @apply w-full h-20 text-center py-4;
}

.input-section {
    @apply w-full flex gap-3 select-none flex-wrap;
}

.record-section {
    @apply w-full grid sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-3 mt-3 select-none;
}

.record-card {
    @apply py-3 px-5 border-2 border-gray-300 rounded-lg flex items-center justify-between select-none;
}

